Contact us Page
Added some icons and text.

--- a/contactus.html
+++ b/contactus.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Albanian Islamic Center</title>
-        <link rel="stylesheet" href="Style-Sheets/events-styles.css">
+        <link rel="stylesheet" href="Style-Sheets/contact-styles.css">
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -43,15 +43,15 @@
 
 
 
-        <div class = "Contact-Page">
-            <div class = "row">
-                <div class = "Contact-Info">
+        <div class = "contact-Page">
+            <div class = "row2">
+                <div class = "contact-Info">
                     <h1>Contact Info</h1>
-                        <h2>LOCATION</h2>
+                        <h2><img src = "images/pin.png" class = "pin-contact">LOCATION</h2>
                             <p>19775 Harper Avenue, Harper Woods, MI 48225</p>
-                        <h2>PHONE NUMBER</h2>
+                        <h2><img src = "images/phone-call.png" class = "phone-contact"> PHONE NUMBER</h2>
                             <p>(313)-884-6676</p>
-                        <h2>EMAIL ADDRESS</h2>
+                        <h2><img src = "images/email.png" class = "email-contact">EMAIL ADDRESS</h2>
                             <p>albislamct@aol.com</p>   
                         <h2>SOCIAL MEDIA</h2>
                             <p>Follow us on Facebook for the latest announcements and updates about events and programs at 
@@ -62,9 +62,9 @@
                             </a>
                 </div>
 
-                <div class = "Mailing-List"></div>
+                <div class = "mailing-List">
                     <h1>Join our Mailing List</h1>
-                    
+                </div>
 
 
 
@@ -77,28 +77,6 @@
 
 
         </div>
-
-
-
-
-            
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
           <div class = "support-section" >
             <div class = "row">
