--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@
             </div>
             <div class="column33">
                 <div class="card">
-                    <h3>Basketball Court</h3>
+                    <h3>Basketball/Volleyball Court</h3>
                     <img src="images/ball-of-basketball.png" class="icon"></i>
                     <div class = "card-text">
-                        <p>Join us for basketball games and practice sessions in our fully equipped gym.
+                        <p>Join us for basketball and volleyball games and practice sessions in our fully equipped gym.
                         <br>
                         <br>
                         </p>
@@ -185,32 +185,7 @@
                     </div>
                 </div>
             </div>
-            <div class="column33">
-                <div class="card">
-                    <h3>Volleyball Court</h3>
-                    <img src="images/volleyball.png" class="icon"></i>
-                    <div class = "card-text">
-                        <p>Join us for volleyball games and practice sessions in our fully equipped gym.
-                        <br>
-                        <br>
-                        </p>
-                        <a href="sundayschool.html" class="sundayschool-btn">Learn More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="column33">
-                <div class="card">
-                    <h3>5 Daily Prayers & Jummah</h3>
-                    <img src="images/salah.png" class="icon"></i>
-                    <div class = "card-text">
-                        <p>Join us for the 5 daily prayers and Jummah prayers in our prayer hall.
-                        <br>
-                        <br>
-                        </p>
-                        <a href="sundayschool.html" class="sundayschool-btn">Learn More</a>
-                    </div>
-                </div>
-            </div>
+
         </div>
         </div>
 
