--- a/sundayschool.html
+++ b/sundayschool.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Albanian Islamic Center</title>
-        <link rel="stylesheet" href="Style-Sheets/index-styles.css">
+        <link rel="stylesheet" href="Style-Sheets/ss-styles.css">
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -39,23 +39,58 @@
             </a> 
         </nav>
 
-<div class = "mainpage">
-            <div class = "slideshow-container">
-                <div class = "mySlides fade">
-                    <img src = "images/Programs.jpg" class = "slideimg" width="100%">
+    <div class = "mainpage">
+                <div class = "slideshow-container">
+                    <div class = "mySlides fade">
+                        <img src = "images/Programs.jpg" class = "slideimg" width="100%">
+                    </div>
+
                 </div>
+                <div class = "text-overlay">
+                <h1 class="banner-text">Programs & Activities</h1>
+                <h2 class="banner-subtext">Learn about our ongoing events, educational programs, and community initiatives.</h2>
+                </div>
+    </div>
 
-            </div>
-            <div class = "text-overlay">
-            <h1 class="banner-text">Programs & Activities</h1>
-            <h2 class="banner-subtext">Learn about our ongoing events, educational programs, and community initiatives.</h2>
-            </div>
+
+    <div class = "programs-section">
+        
+        <h1>Sunday School</h1>
+        <div class = "description">
+            <div class="circle-accent"></div>
+            <img src = "images/Programss.jpg" class = "program-img">
+            <p>Our Sunday School is dedicated to providing a comprehensive Islamic education for children and youth. 
+                We offer classes that cover Quranic studies, Islamic teachings, and cultural heritage, fostering a 
+                strong foundation in faith and community values.</p>
         </div>
+        <div class = "Quran-class">
+            <div class="circle-accent"></div>
+            <h2>Quranic Studies</h2>
+            <p>Our Quranic studies program is designed to introduce children to the holy Quran and its teachings.
+        </div>
+        <div class = "right-align-wrapper">
+        <div class = "fiqh-class">
+            <div class="circle-accent"></div>
+            <h2>Fiqh and Aqeedah Classes</h2>
+            <p>Fiqh classes provide in-depth knowledge of Islamic jurisprudence, helping students understand the 
+                practical applications of Islamic law in daily life.</p>
+        </div>
+        </div>
+        <div class = "albanian-class">
+            <div class="circle-accent"></div>
+            <h2>Albanian Language Class</h2>
+            <p>The Albanian language class is a valuable opportunity for children to learn the Albanian language, 
+                fostering a deep understanding of the Albanian culture and heritage.</p>
+        </div>
+    </div>
 
-
-
-
-
+    <div class = "gym">
+        <h1>Basketball/Volleyball Court</h1>
+        <div class = "description">
+            <img src = "images/basketball-court.jpg" class = "gym-img">
+            <p>Our basketball court is a vibrant space where children can play and learn together.</p>
+        </div>
+    </div>
 
 
 
