--- a/about.html
+++ b/about.html
@@ -173,8 +173,12 @@
 
         <div class = "ShuajbGerguri">
             <div class = "row">
-                <div class = "columna11">
-                    <h1>Imam Shuajb Gerguri</h1>
+                <div class = "columna1">
+                     <img src = "images/ImamShuajb.jpg" alt="Imam Shuajb Gerguri" class="column-img">
+                </div>
+                <div class = "columna2">
+                   
+                                        <h1>Imam Shuajb Gerguri</h1>
                         <p>Imam Shuajb Gerguri, born in 1970 in the village of Dajç, Shkoder, Albania, is a prominent 
                             Islamic scholar and the current imam of the Albanian Islamic Center in Harper Woods, Michigan. 
                             He completed his religious education at the Institute of Islamic Studies in Tirana and later 
@@ -187,14 +191,12 @@
                             American society while maintaining strong ties to the Albanian Muslim community. Imam Gerguri continues 
                             to lead the Center with compassion and commitment to serving both spiritual and community needs.</p>
                 </div>
-                <div class = "columna22">
-                    <img src = "images/ImamShuajb.jpg" alt="Imam Shuajb Gerguri" class="column-img">
-                </div>
 
             </div>
- 
         </div>
         <div class = "Leadership">
+        <div class="row">
+        <div class = "columna11"> 
         <h1>The Community Board</h1>
             <p>Imam Vehbi Ismail, the founder and first imam, was a prominent Muslim leader,
                  scholar, and author of numerous books in both Albanian and English. 
@@ -202,8 +204,12 @@
                   and opposing communist rule in Albania. In 1996, upon Imam Ismail's retirement, 
                   Imam Shuajb Gerguri assumed the role of the Center's imam and continues to serve 
                   the community with dedication and compassion.</p>
+            </div>
+        <div class = "columna22">
+        <img src = "images/Leadership.jpg" alt="Albanian Islamic Center Leadership" class="column-img">
         </div>
-
+        </div>
+        </div>
 
 
                 <div class = "support-section" >
