--- a/index.html
+++ b/index.html
@@ -109,9 +109,6 @@
 
         <div class = "events-section" >
             <h1>Events and Announcements</h1>
-            <p>Stay up to date with everything happening at the Albanian Islamic Center. 
-            View upcoming events on our interactive calendar and see recent announcements directly from our Facebook page. 
-            </p>
             <div class = "row">
                 <div class="column11">     
                     <h2>Upcoming Events</h2>
@@ -131,7 +128,10 @@
         <div class = "programs-section">
             <h1>Programs & Activities</h1>
             <div class="row">
+                <h2>Check out our Youth Sunday <br> School program.  We offer many <br> classes for children to be able to <br>learn more about Islam 
+                as well as their heritage.</h2>
             <div class="column33">
+                
                 <div class="card">
                     <h3>Quran Class with Tajweed</h3>
                     <img src="images/quran.png" class="icon"></i>
@@ -185,17 +185,49 @@
                     </div>
                 </div>
             </div>
-
+            <div class="column33">
+                <div class="card">
+                    <h3>Albanian Culture Class</h3>
+                    <img src="images/dance.png" class="icon"></i>
+                    <div class = "card-text">
+                        <p>Learn traditional Albanian dances, music, and customs in a fun and engaging environment.
+                        <br>
+                        <br>
+                        </p>
+                        <a href="sundayschool.html" class="sundayschool-btn">Learn More</a>
+                    </div>
+                </div>
+            </div>
         </div>
         </div>
 
         <div class = "services-section">
             <h1> Services</h1>
-            <div class = "sections">
-                <h2 id ="sections-1"> Marriage Services</h2>
-                <h2 id ="sections-2"> Funeral Services</h2>
-                <h2 id ="sections-3"> Gymnasium Services</h2>
-                <h2 id ="sections-4"> Zakat Services</h2>
+            <div class="grid-container">
+                <div class = "grid-item1">
+                    <img src="images/customer-review.png" class="service-icon">
+                    <h2>Marriage Services</h2>
+                    <p>Nikkah ceremony for Muslim couples.</p>
+                    <a href="services.html" class="sundayschool-btn">Learn More</a>
+                </div>
+                <div class = "grid-item2">
+                    <img src="images/customer-review.png" class="service-icon">
+                    <h2>Funeral Services</h2>
+                    <p>Support and guidance for families during times of loss.</p>
+                    <a href="services.html" class="sundayschool-btn">Learn More</a>
+                </div>
+                <div class = "grid-item3">
+                    <img src="images/customer-review.png" class="service-icon">
+                    <h2>Zakat Services</h2>
+                    <p>Zakat services for people in need.</p>
+                    <a href="services.html" class="sundayschool-btn">Learn More</a>
+                </div>
+                <div class = "grid-item4">
+                    <img src="images/customer-review.png" class="service-icon">
+                    <h2>Gym Rental Services</h2>
+                    <p>Rent the gym for your events.</p>
+                    <a href="services.html" class="sundayschool-btn">Learn More</a>
+                </div>
             </div>
         </div>
 
