--- a/islam.html
+++ b/islam.html
@@ -59,10 +59,10 @@
                          develop a close relationship with Him through acts of worship, righteous living, and care for creation. 
                          At its core, Islam is both a personal journey and a communal way of life, offering guidance for both spiritual 
                          and everyday matters.</p>
-                    <p class = "introtext">The foundation of a Muslim's practice lies in the Five Pillars of Islam—declarations and acts 
+                    <p class = "introtext">The foundation of a Muslim's practice lies in the <b>Five Pillars of Islam</b>—declarations and acts 
                         that shape the daily rhythm and lifelong commitments of a believer. These include the testimony of faith, 
                         prayer, charity, fasting, and pilgrimage.</p>
-                    <p class = "introtext">Equally essential are the Six Articles of Faith, which form the basis of Islamic belief:
+                    <p class = "introtext">Equally essential are the <b>Six Articles of Faith</b>, which form the basis of Islamic belief:
                          belief in Allah, His angels, His revealed books, His prophets, the Day of Judgment, and divine decree.
 
                         Together, these pillars provide a comprehensive spiritual and ethical framework—grounding Muslims in their faith while encouraging compassion, discipline, and purpose in the world.</p>
@@ -140,15 +140,15 @@
             </div>
         </div>
             <div class = "Questions">
-                <button class = "accordion">Section 1</button>
+                <button class = "accordion">What is the Quran?</button>
                 <div class = "panel">
                     <p>Answer 1</p>
                 </div>
                 <button class = "accordion">Section 2</button>
                 <div class = "panel">
-                    <p>Answer 2</p>
+                    <p>What do Muslims think of Jesus</p>
                 </div>
-                <button class = "accordion">Section 3</button>
+                <button class = "accordion">What do Muslims think of Jesus?</button>
                 <div class = "panel">
                     <p>Answer 3</p>
                 </div>
