--- a/sundayschool.html
+++ b/sundayschool.html
@@ -66,14 +66,21 @@
         <div class = "Quran-class">
             <div class="circle-accent"></div>
             <h2>Quranic Studies</h2>
+            <div class = "Paragraphing">
             <p>Our Quranic studies program is designed to introduce children to the holy Quran and its teachings.
+                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+            </div>
+            <img src = "/images/Quran-teacher.jpg" class = "teacher-img">
         </div>
         <div class = "right-align-wrapper">
         <div class = "fiqh-class">
-            <div class="circle-accent"></div>
+            <div class="circle-accent2"></div>
             <h2>Fiqh and Aqeedah Classes</h2>
+            <div class = "Paragraphing2">
             <p>Fiqh classes provide in-depth knowledge of Islamic jurisprudence, helping students understand the 
-                practical applications of Islamic law in daily life.</p>
+                practical applications of Islamic law in daily life. Aqeedah classes Lorem ipsum Lorem ipsum</p>
+            </div>
+            <img src = "/images/Aqeedah image.jpg" class = "aqeedah-img">
         </div>
         </div>
         <div class = "albanian-class">
