--- a/events.html
+++ b/events.html
@@ -198,7 +198,7 @@
                         <h1>Albania Independence Day</h1>
                         <p>19775 Harper Ave, Harper Woods, MI 48225. <br>
                         Doors open at 5pm, Program starts at 6pm. <br>
-                        This event celebrates Albanian heritage with a dinner and community gathering. <br>
+                        This event celebrates Albanian heritage<br> with a dinner and community gathering. <br>
                         Call <b>313-588-1628</b> for more info or to RSVP.</p>
                         <p>NOTE: Ticket prices and program details will be announced closer to the event.</p>
                     </div>
@@ -232,7 +232,7 @@
                     <div class="stack">
                         <img src="images/Iftar.jpg" class="Weekly-Ramadan-Iftars-img">
                     </div>
-                    <div class="stack-text">
+                    <div class="stack-text2">
                         <h1>Weekly Ramadan Iftars</h1>
                         <p>Every Sunday during Ramadan at 19775 Harper Ave. <br>
                         Doors open at 7pm, Iftar at Maghrib time. <br>
@@ -240,8 +240,8 @@
                         Sponsored meals, lectures, and taraweeh to follow. <br>
                         For questions or to sponsor a dinner, call <b>313-588-1628.</b></p>
                     </div>
-                        <div class="ticket-btn">
-                        <button hidden class="eventtkt-btn">Buy Tickets</button>
+                        <div class="ticket-btn2">
+                        <button  class="eventtkt-btn">Buy Tickets</button>
                     </div>
                 </div>
             </div>
@@ -259,8 +259,8 @@
                         Past guests include presidents, <br> prime ministers, politicians, academics, and religious leaders from <br> Albania and Kosovo. 
                         Follow us on Facebook or join our mailing list to stay informed.</p>
                     </div>
-                                                                    <div class="ticket-btn">
-                        <button hidden class="eventtkt-btn">Buy Tickets</button>
+                        <div class="ticket-btn2">
+                        <button  class="eventtkt-btn">Buy Tickets</button>
                     </div>
                 </div>
 
