--- a/sundayschool.html
+++ b/sundayschool.html
@@ -86,8 +86,22 @@
         <div class = "albanian-class">
             <div class="circle-accent"></div>
             <h2>Albanian Language Class</h2>
+            <div class = "Paragraphing3">
             <p>The Albanian language class is a valuable opportunity for children to learn the Albanian language, 
                 fostering a deep understanding of the Albanian culture and heritage.</p>
+            </div>
+            <img src = "/images/albanian-language.jpg" class = "alb-img">
+        </div>
+                <div class = "right-align-wrapper">
+        <div class = "fiqh-class">
+            <div class="circle-accent2"></div>
+            <h2>Fiqh and Aqeedah Classes</h2>
+            <div class = "Paragraphing2">
+            <p>Fiqh classes provide in-depth knowledge of Islamic jurisprudence, helping students understand the 
+                practical applications of Islamic law in daily life. Aqeedah classes Lorem ipsum Lorem ipsum</p>
+            </div>
+            <img src = "/images/Aqeedah image.jpg" class = "aqeedah-img">
+        </div>
         </div>
     </div>
 
