--- a/banquethall.html
+++ b/banquethall.html
@@ -1,15 +1,301 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Albanian Islamic Center - Banquet Hall</title>
+        <link rel="stylesheet" href="Style-Sheets/banquet-styles.css">
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+        />
+    </head>
 
+    <body>
+        <div id="fb-root"></div>
+        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v22.0"></script>
+        
+        <div class="contacttop">
+            <p>19775 Harper Avenue, Harper Woods, MI 48225</p>
+            <p>(313)-884-6676&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;albislamct@aol.com</p>
+        </div>
 
-<link rel="stylesheet" href="/Style-Sheets/banquet-styles.css">
+        <nav class="navbar">
+            <a href="#" class="logo">
+                <img src="images/Logo.png">
+            </a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="islam.html">What is Islam?</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="sundayschool.html">Programs & Activities</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="banquethall.html">Banquet Hall</a></li>
+                <li><a href="membership.html">Join Us</a></li>
+                <li><a href="contactus.html">Contact Us</a></li>
+            </ul>
+            <a href="#" class="donate-btn">
+                <img src="images/donation.png" class="heart-icon">
+                Donate
+            </a> 
+        </nav>
 
+        <div class="mainpage">
+            <div class="slideshow-container">
+                <div class="mySlides fade">
+                    <img src="images/hero-events.jpg" class="slideimg" width="100%">
+                </div>
+            </div>
+            <div class="text-overlay">
+                <h1 class="banner-text">Banquet Hall</h1>
+                <h2 class="banner-subtext">Elegant Venue for Your Special Occasions</h2>
+            </div>
+        </div>
 
+        <!-- Banquet Hall Introduction -->
+        <section class="banquet-intro">
+            <h2>Welcome to Our Beautiful Banquet Hall</h2>
+            <p>
+                The Albanian Islamic Center's banquet hall provides an elegant and spacious venue for your most cherished celebrations. 
+                Whether you're planning a wedding reception, engagement party, anniversary celebration, corporate event, or community gathering, 
+                our hall offers the perfect setting with traditional hospitality and modern amenities. Our  team is dedicated 
+                to making your event memorable and seamless.
+            </p>
+        </section>
 
+        <!-- Hall Features -->
+        <section class="features-section">
+            <h2>Hall Features & Amenities</h2>
+            <div class="features-grid">
+                <div class="feature-item">
+                    <h3>Spacious Interior</h3>
+                    <p>Accommodates up to 650 guests with flexible seating arrangements</p>
+                </div>
+                <div class="feature-item">
+                    <h3>Kitchen Facilities</h3>
+                    <p>Decent sized kitchen for catering preparation and service</p>
+                </div>
+                <div class="feature-item">
+                    <h3>Audio/Visual Equipment</h3>
+                    <p>Sound system and projection capabilities for presentations</p>
+                </div>
+                <div class="feature-item">
+                    <h3>Prayer Area Access</h3>
+                    <p>Adjacent prayer facilities for religious ceremonies</p>
+                </div>
+                <div class="feature-item">
+                    <h3>Parking</h3>
+                    <p> On-site parking for your guests' convenience as well as the City Library parking</p>
+                </div>
+                <div class="feature-item">
+                    <h3>Climate Control</h3>
+                    <p>Comfortable year-round temperature control</p>
+                </div>
+                <div class="feature-item">
+                    <h3>Dividers</h3>
+                    <p>Dividers for privacy and separation of the genders if necessary</p>
+                </div>
+                <div class="feature-item">
+                    <h3>Gym Rental</h3>
+                    <p>With an added fee of $100, the gym can be utilized for children's activities</p>
+                </div>
+                <div class="feature-item">
+                    <h3>Wifi</h3>
+                    <p>Free WiFi access for your convenience</p>
+                </div>
+            </div>
+        </section>
 
+        <!-- Image Gallery Placeholder -->
+        <div class = "gallery-section" >
+            <h2>Hall Gallery</h2>
+            <p>Take a virtual tour of our beautiful banquet hall.</p>
+            <div class = "column111">
+                <div class = "container">
+                    <!-- Slider main container -->
+                    <div class="swiper">
+                    <!-- Additional required wrapper -->
+                    <div class="swiper-wrapper">
+                        <!-- Slides -->
+                        <div class="swiper-slide"> <img src="images/banquet1.jpg"></div>
+                        <div class="swiper-slide"> <img src="images/banquet2.jpg"></div>
+                        <div class="swiper-slide"> <img src="images/banquet3.jpg"></div>
+                        <div class="swiper-slide"> <img src="images/banquet4.jpg"></div>
+                        <div class="swiper-slide"> <img src="images/banquet5.jpg"></div>
+                        <div class="swiper-slide"> <img src="images/banquet6.jpg"></div>
+                    </div>
+                    <!-- If we need pagination -->
+                    <div class="swiper-pagination"></div>
 
+                    <!-- If we need navigation buttons -->
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-<div class="service-card">
-  <div class="circle-accent"></div>
-  <div class="icon">🔧</div> <!-- Replace with an actual icon -->
-  <h3>Driveway Pressure Washing</h3>
-  <p>Remove oil stains, dirt, and grime from your driveway to enhance curb appeal and prevent deterioration.</p>
-</div>
+        <!-- Pricing & Packages -->
+        <section class="pricing-section">
+            <h2>Rental Information</h2>
+            <div class="pricing-grid">
+
+                <div class="pricing-card featured">
+                    <h3>Full Day Rental</h3>
+                    <div class="price">Contact for Pricing</div>
+                    <ul>
+                        <li>8-hour venue access</li>
+                        <li>All tables and chairs</li>
+                        <li>Full A/V equipment</li>
+                        <li>Complete kitchen access</li>
+                        <li>Setup assistance</li>
+                    </ul>
+                </div>
+                <div class="pricing-card">
+                    <h3>Extended Event</h3>
+                    <div class="price">Contact for Pricing</div>
+                    <ul>
+                        <li>Multi-day access available</li>
+                        <li>Flexible arrangements</li>
+                        <li>Custom packages</li>
+                        <li>Dedicated support</li>
+                    </ul>
+                </div>
+            </div>
+            <p class="pricing-note">
+                <strong>Special rates available for community members and religious events. 
+                Contact us for detailed pricing and availability.</strong>
+            </p>
+        </section>
+
+        <!-- Booking Guidelines -->
+        <section class="guidelines-section">
+            <h2>Booking Guidelines</h2>
+            <div class="guidelines-content">
+                <div class="guideline-item">
+                    <h3>Advance Booking</h3>
+                    <p>Reserve your date at least 30 days in advance for optimal availability</p>
+                </div>
+                <div class="guideline-item">
+                    <h3>Deposit Required</h3>
+                    <p>A deposit is required to secure your booking date</p>
+                </div>
+                <div class="guideline-item">
+                    <h3>Halal Requirements</h3>
+                    <p>All food and beverages must comply with Islamic dietary guidelines</p>
+                </div>
+                <div class="guideline-item">
+                    <h3>Cleanup</h3>
+                    <p>Hall must be returned to original condition after use</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact Form -->
+        <section class="rental-form-section">
+            <h2>Request Information or Book Your Event</h2>
+            <p>Fill out the form below and we'll get back to you within 24 hours</p>
+            <form action="mailto:albislamct@aol.com" method="post" enctype="text/plain">
+                <div class="form-row">
+                    <input type="text" name="name" placeholder="Your Full Name" required>
+                    <input type="email" name="email" placeholder="Your Email Address" required>
+                </div>
+                <div class="form-row">
+                    <input type="tel" name="phone" placeholder="Phone Number" required>
+                    <select name="event_type" required>
+                        <option value="">Select Event Type</option>
+                        <option value="wedding">Wedding Reception</option>
+                        <option value="engagement">Engagement Party</option>
+                        <option value="anniversary">Anniversary Celebration</option>
+                        <option value="birthday">Birthday Party</option>
+                        <option value="corporate">Corporate Event</option>
+                        <option value="community">Community Gathering</option>
+                        <option value="religious">Religious Event</option>
+                        <option value="other">Other</option>
+                    </select>
+                </div>
+                <div class="form-row">
+                    <input type="date" name="preferred_date" required>
+                    <input type="number" name="guest_count" placeholder="Expected Number of Guests" min="1" max="200" required>
+                </div>
+                <div class="form-row">
+                    <select name="rental_duration">
+                        <option value="">Select Rental Duration</option>
+                        <option value="half_day">Half Day (4 hours)</option>
+                        <option value="full_day">Full Day (8 hours)</option>
+                        <option value="extended">Extended/Custom</option>
+                    </select>
+                    <input type="time" name="start_time" placeholder="Preferred Start Time">
+                </div>
+                <textarea name="additional_info" rows="5" placeholder="Additional information about your event, special requirements, or questions..."></textarea>
+                <div class="checkbox-section">
+                    <label>
+                        <input type="checkbox" name="community_member" value="yes">
+                        I am a member of the Albanian Islamic Center community
+                    </label>
+                </div>
+                <button type="submit">Send Inquiry</button>
+                <p class="form-note">
+                    <strong>Note:</strong> This form will open your email client. You can also call us directly at 
+                    <a href="tel:313-884-6676">(313) 884-6676</a> or email 
+                    <a href="mailto:albislamct@aol.com">albislamct@aol.com</a>
+                </p>
+            </form>
+        </section>
+
+        <!-- Footer -->
+        <div class="support-section">
+            <div class="row">
+                <div class="support-text">
+                    <img src="images/Logo.png" alt="Albanian Islamic Center Logo" class="logo-img">
+                    <p>Welcome to the Albanian Islamic Center, a place of worship, learning, and community rooted in 
+                        rich Balkan heritage and Islamic tradition. We strive to foster a welcoming and inclusive 
+                        space for every member of the Muslim community.</p>
+                    <a href="https://www.facebook.com/Albanianislamiccenter/?ref=embed_page#" class="social-media" target="_blank"> 
+                        <img src="images/facebook.png" class="facebook-img">
+                    </a>
+                </div>
+                <div class="contact-info">
+                    <h2>Contact</h2>
+                    <h3><img src="images/email.png" class="email-icon">Email Address</h3>
+                    <p>albislamct@aol.com</p>
+                    <h3><img src="images/phone-call.png" class="phone-icon">Phone Number</h3>
+                    <p>(313)-884-6676</p>
+                    <h3><img src="images/pin.png" class="pin-icon">Location</h3>
+                    <p>19775 Harper Avenue, Harper Woods, MI 48225</p>
+                </div>
+                <div class="socials">
+                    <h2>Social Media</h2>
+                    <p>Follow us on Facebook for the latest announcements and updates about events and programs at 
+                        the Albanian Islamic Center.</p>
+                    <a href="https://www.facebook.com/Albanianislamiccenter/" class="social-media" target="_blank">
+                        <img src="images/facebook.png" alt="Facebook" class="facebook-img">
+                    </a>
+                </div>
+                <div class="newsletter">
+                    <h2>Newsletter</h2>
+                    <p>Subscribe to our newsletter to receive updates on events, programs, and community news directly 
+                        to your inbox. Stay connected with the Albanian Islamic Center.</p>
+                    <form action="https://aol.us13.list-manage.com/subscribe/post?u=096bcfd7c98cb079bfb26df4f&amp;id=36db6b2f2f" method="post" novalidate>
+                        <input type="email" name="EMAIL" id="email" placeholder="Enter your email" required>
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                            <input type="text" name="b_096bcfd7c98cb079bfb26df4f_36db6b2f2f" tabindex="-1" value="">
+                        </div>
+                        <button type="submit">Subscribe</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <footer> 
+            <p>© 2025 aicod.org. All Rights Reserved.<br>
+            Icons made from www.flaticon.com</p>
+        </footer>
+
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+        <script src="webscripts.js"></script>
+        <script>
+            // Show the first slide
+            document.querySelector('.mySlides').style.display = 'block';
+        </script>
+    </body>
+</html>
