--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="column1" data-aos="fade-right">
                     <h1>Daily Prayer Times</h1>
                     <div class="prayer-times-container">
-                        <iframe src="https://www.islamicfinder.org/prayer-widget/19775-harper-avenue-harper-woods-mi-48225-usa/prayer-times/" width="100%" height="560" frameborder="0" allowtransparency="true" style="border-radius: 10px;"></iframe>
+                        <iframe src="https://timing.athanplus.com/masjid/widgets/embed?theme=1&masjid_id=PAPwW0LJ&color=C2A878" type="text/html" width="60%" height="560" frameborder="0" allowtransparency="true"></iframe>
                     </div>
                 </div>
                 <div class="column2" data-aos="fade-left">
@@ -116,7 +116,7 @@
                 <div class="column11">     
                     <h2>Upcoming Events</h2>
                     <div class="calendar-container">
-                        <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FNew_York&showPrint=0&mode=AGENDA&src=Z2VyZ2VqbUBnbWFpbC5jb20&src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%237986CB&color=%23795548" style="border:solid 1px #777" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+                        <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FNew_York&showPrint=0&mode=AGENDA&src=Z2VyZ2VqbUBnbWFpbC5jb20&src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%237986CB&color=%23795548" style="border:solid 1px #777" width="99%" height="600" frameborder="0" scrolling="no"></iframe>
                     </div>
                     <div class="footer-btn">
                         <a href="events.html" class="events-btn">View All Events</a>
