--- a/banquethall.html
+++ b/banquethall.html
@@ -240,7 +240,7 @@
         <section class="rental-form-section">
             <h2>Request Information or Book Your Event</h2>
             <p>Fill out the form below and we'll get back to you within 24 hours</p>
-            <form action="mailto:albislamct@aol.com" method="post" enctype="text/plain">
+            <form action="https://getform.io/f/adrglyxa" method="POST" >
                 <div class="form-row">
                     <input type="text" name="name" placeholder="Your Full Name" required>
                     <input type="email" name="email" placeholder="Your Email Address" required>
@@ -273,17 +273,13 @@
                 </div>
                 <textarea name="additional_info" rows="5" placeholder="Additional information about your event, special requirements, or questions..."></textarea>
                 <div class="checkbox-section">
+                    <input type="hidden" name="community_member" value="no">
                     <label>
                         <input type="checkbox" name="community_member" value="yes">
                         I am a member of the Albanian Islamic Center community
                     </label>
                 </div>
                 <button type="submit">Send Inquiry</button>
-                <p class="form-note">
-                    <strong>Note:</strong> This form will open your email client. You can also call us directly at 
-                    <a href="tel:313-884-6676">(313) 884-6676</a> or email 
-                    <a href="mailto:albislamct@aol.com">albislamct@aol.com</a>
-                </p>
             </form>
         </section>
 
