--- a/index.html
+++ b/index.html
@@ -31,10 +31,14 @@
                 <li><a href="membership.html">Join Us</a></li>
                 <li><a href="contactus.html">Contact Us</a></li>
             </ul>
-            <a href="#" class="donate-btn">
-                <img src="images/donation.png" class="heart-icon">
-                Donate
-            </a> 
+    <form action="https://www.paypal.com/donate" method="post" target="_blank" class="donate-form">
+        <input type="hidden" name="hosted_button_id" value="LMWW6JLZ9N57L" />
+        <button type="submit" class="donate-btn" title="PayPal - The safer, easier way to pay online!">
+            <img src="images/donation.png" class="heart-icon" alt="Heart icon">
+            Donate
+        </button>
+        
+    </form>
         </nav>
 
         <div class="mainpage">
