--- a/banquethall.html
+++ b/banquethall.html
@@ -88,12 +88,13 @@
                             <ul>
                                 <li>Beautiful banquet hall space</li>
                                 <li>Tables and chairs</li>
-                                <li>Sound system & A/V equipment</li>
+                                <li>Sound system </li>
                                 <li>Climate control (AC/heating)</li>
                                 <li>Free WiFi access</li>
                                 <li>Kitchen facilities for caterer use</li>
                                 <li>Prayer area access</li>
                                 <li>Parking facilities</li>
+                                <li>Setup & Cleaning services</li>
                             </ul>
                         </div>
                         
@@ -133,11 +134,11 @@
                 </div>
                 <div class="feature-item">
                     <h3>Kitchen Facilities</h3>
-                    <p>Decent sized kitchen for catering preparation and service</p>
+                    <p>Decent sized kitchen for catering preparation and service.</p>
                 </div>
                 <div class="feature-item">
-                    <h3>Audio/Visual Equipment</h3>
-                    <p>Sound system and projection capabilities for presentations</p>
+                    <h3>Audio Equipment</h3>
+                    <p>Sound system for audio requirements.</p>
                 </div>
                 <div class="feature-item">
                     <h3>Prayer Area Access</h3>
@@ -145,7 +146,7 @@
                 </div>
                 <div class="feature-item">
                     <h3>Parking</h3>
-                    <p>On-site parking for your guests' convenience as well as the City Library parking</p>
+                    <p>On-site parking for your guests' convenience </p>
                 </div>
                 <div class="feature-item">
                     <h3>Climate Control</h3>
@@ -157,7 +158,7 @@
                 </div>
                 <div class="feature-item">
                     <h3>Gym Rental</h3>
-                    <p>With an added fee of $100, the gym can be utilized for children's activities</p>
+                    <p>With an added fee of $200, the gym can be utilized for children's activities</p>
                 </div>
                 <div class="feature-item">
                     <h3>WiFi</h3>
@@ -202,7 +203,7 @@
                     <ul>
                         <li>8-hour venue access</li>
                         <li>All tables and chairs</li>
-                        <li>Full A/V equipment</li>
+                        <li>Full Audio equipment</li>
                         <li>Complete kitchen access</li>
                         <li>Setup assistance</li>
                     </ul>
@@ -234,15 +235,11 @@
                 </div>
                 <div class="guideline-item">
                     <h3>Deposit Required</h3>
-                    <p>A deposit is required to secure your booking date</p>
+                    <p>A  non-refundable deposit is required to secure your booking date</p>
                 </div>
                 <div class="guideline-item">
                     <h3>Halal Requirements</h3>
                     <p>All food and beverages must comply with Islamic dietary guidelines</p>
-                </div>
-                <div class="guideline-item">
-                    <h3>Cleanup</h3>
-                    <p>Hall must be returned to original condition after use</p>
                 </div>
             </div>
         </section>
@@ -300,7 +297,7 @@
                 <div class="support-text">
                     <img src="images/Logo.png" alt="Albanian Islamic Center Logo" class="logo-img">
                     <p>Welcome to the Albanian Islamic Center, a place of worship, learning, and community rooted in 
-                        rich Balkan heritage and Islamic tradition. We strive to foster a welcoming and inclusive 
+                        rich Albanian heritage and Islamic tradition. We strive to foster a welcoming and inclusive 
                         space for every member of the Muslim community.</p>
                     <a href="https://www.facebook.com/Albanianislamiccenter/?ref=embed_page#" class="social-media" target="_blank"> 
                         <img src="images/facebook.png" class="facebook-img">
