--- a/islam.html
+++ b/islam.html
@@ -57,7 +57,7 @@
             </div>
             <div class="text-overlay">
                 <h1 class="banner-text">What is Islam?</h1>
-                <h2 class="banner-subtext">Explore the fundamental beliefs and practices of Islam, a faith of over a billion followers worldwide.</h2>
+                <h2 class="banner-subtext">Explore the fundamental beliefs and practices of Islam, a faith of over two billion followers worldwide.</h2>
             </div>
         </div>
 
@@ -67,7 +67,7 @@
                     <h1>What is Islam?</h1>
                     <p class="introtext">Islam is a monotheistic faith revealed to the Prophet Muhammad ﷺ over 1,400 years ago.
                          The word "Islam" means "submission to the will of God," and it emphasizes peace, compassion, and justice.
-                          Today, over 1.9 billion Muslims across the world follow this path, striving to live lives rooted in moral
+                          Today, over 2 billion Muslims across the world follow this path, striving to live lives rooted in moral
                            clarity, spiritual devotion, and service to others.</p>
                     <p class="introtext">Muslims believe in one God (Allah), who is merciful, just, and all-powerful. They seek to
                          develop a close relationship with Him through acts of worship, righteous living, and care for creation. 
@@ -92,7 +92,7 @@
                 <div class="grid-item1" data-aos="fade-up" data-aos-delay="100">
                     <img src="images/shahada.jpg" class="pillars-img">
                     <h2>Shahada (Testimony of Faith)</h2>
-                    <p>The declaration that "There is no god but Allah, and Muhammad is His messenger." This testimony is the foundation of Islamic faith and the first step into Islam.</p>
+                    <p>The declaration that "There is no god but Allah, and Muhammad ﷺ  is His servant and messenger." This testimony is the foundation of Islamic faith and the first step into Islam.</p>
                 </div>
                 <div class="grid-item2" data-aos="fade-up" data-aos-delay="200">
                     <img src="images/prayer.jpg" class="pillars-img">
@@ -128,7 +128,7 @@
                 <div class="grid-item22" data-aos="fade-up" data-aos-delay="200">
                     <div class="faith-icon"></div>
                     <h2>Belief in Angels</h2>
-                    <p>Belief in unseen beings created by Allah who carry out His commands without free will. Angels serve Allah and deliver His messages.</p>
+                    <p>Belief in unseen beings created by Allah who carry out His commands. Angels serve Allah and deliver His messages.</p>
                 </div>
                 <div class="grid-item33" data-aos="fade-up" data-aos-delay="300">
                     <div class="faith-icon"></div>
@@ -138,12 +138,12 @@
                 <div class="grid-item44" data-aos="fade-up" data-aos-delay="400">
                     <div class="faith-icon"></div>
                     <h2>Belief in Prophets</h2>
-                    <p>Belief in the messengers chosen by Allah to guide humanity, including Adam, Moses, Jesus, and Muhammad ﷺ as the final prophet.</p>
+                    <p>Belief in the messengers chosen by Allah to guide humanity, including Adam, Abraham, Moses, Jesus, and Muhammad ﷺ as the final prophet.</p>
                 </div>
                 <div class="grid-item55" data-aos="fade-up" data-aos-delay="500">
                     <div class="faith-icon"></div>
                     <h2>Belief in the Last Day</h2>
-                    <p>Belief in a final day when every soul will be held accountable and judged by Allah for their deeds in this life.</p>
+                    <p>Belief in a final day when every soul will be held accountable and judged by Allah for their faith and  deeds in this life.</p>
                 </div>
                 <div class="grid-item66" data-aos="fade-up" data-aos-delay="600">
                     <div class="faith-icon"></div>
@@ -158,7 +158,7 @@
             
             <button class="accordion">What is the Quran?</button>
             <div class="panel">
-                <p>The Quran is the holy book of Islam, believed by Muslims to be the direct word of Allah as revealed to Prophet Muhammad ﷺ through the Angel Gabriel. It contains 114 chapters (surahs) and covers guidance for all aspects of life, including worship, morality, guidance for mankind, and law. Muslims believe the Quran has remained unchanged since its revelation over 1,400 years ago.</p>
+                <p>The Quran is the holy book of Islam, believed by Muslims to be the direct word of Allah as revealed to Prophet Muhammad ﷺ through the Angel Gabriel. It contains 114 chapters (surahs) and covers guidance for all aspects of life, including worship, morality, guidance for mankind, and law. The Quran has remained unchanged since its revelation over 1,400 years ago. There are millions of people around the world who have memorized the Quran in its entirety. The Quran is recited on a daily basis in the 5 daily prayers.</p>
             </div>
 
             <button class="accordion">What do Muslims think of Jesus?</button>
@@ -217,7 +217,7 @@
                 <div class="support-text">
                     <img src="images/Logo.png" alt="Albanian Islamic Center Logo" class="logo-img">
                     <p>Welcome to the Albanian Islamic Center, a place of worship, learning, and community rooted in 
-                        rich Balkan heritage and Islamic tradition. We strive to foster a welcoming and inclusive 
+                        rich Albanian heritage and Islamic tradition. We strive to foster a welcoming and inclusive 
                         space for every member of the Muslim community.</p>
                     <a href="https://www.facebook.com/Albanianislamiccenter/?ref=embed_page#" class="social-media" target="_blank"> 
                         <img src="images/facebook.png" class="facebook-img">
