--- a/membership.html
+++ b/membership.html
@@ -107,7 +107,7 @@
                                 <img src="images/donation.png" alt="Discounts">
                             </div>
                             <h3>Event Discounts</h3>
-                            <p>Special member discounts on dinners and programs</p>
+                            <p>Special member discounts on renting the facilities</p>
                         </div>
                         
                         <div class="benefit-item">
@@ -243,7 +243,7 @@ Submitted on: ${new Date().toLocaleDateString()} at ${new Date().toLocaleTimeStr
                 <div class="support-text">
                     <img src="images/Logo.png" alt="Albanian Islamic Center Logo" class="logo-img">
                     <p>Welcome to the Albanian Islamic Center, a place of worship, learning, and community rooted in 
-                        rich Balkan heritage and Islamic tradition. We strive to foster a welcoming and inclusive 
+                        rich Albanian heritage and Islamic tradition. We strive to foster a welcoming and inclusive 
                         space for every member of the Muslim community.</p>
                     <a href="https://www.facebook.com/Albanianislamiccenter/?ref=embed_page#" class="social-media" target="_blank"> 
                         <img src="images/facebook.png" class="facebook-img">
