--- a/contactus.html
+++ b/contactus.html
@@ -87,27 +87,7 @@
                             </div>
                         </div>
 
-                        <div class="office-hours">
-                            <h3>Office Hours</h3>
-                            <div class="hours-list">
-                                <div class="hour-item">
-                                    <span class="day">Monday - Thursday:</span>
-                                    <span class="time">9:00 AM - 5:00 PM</span>
-                                </div>
-                                <div class="hour-item">
-                                    <span class="day">Friday:</span>
-                                    <span class="time">9:00 AM - 2:00 PM</span>
-                                </div>
-                                <div class="hour-item">
-                                    <span class="day">Saturday:</span>
-                                    <span class="time">10:00 AM - 4:00 PM</span>
-                                </div>
-                                <div class="hour-item">
-                                    <span class="day">Sunday:</span>
-                                    <span class="time">Programs 10:00 AM - 2:00 PM</span>
-                                </div>
-                            </div>
-                        </div>
+
 
                         <div class="social-section">
                             <h3>Follow Us</h3>
@@ -197,7 +177,7 @@
                 <div class="support-text">
                     <img src="images/Logo.png" alt="Albanian Islamic Center Logo" class="logo-img">
                     <p>Welcome to the Albanian Islamic Center, a place of worship, learning, and community rooted in 
-                        rich Balkan heritage and Islamic tradition. We strive to foster a welcoming and inclusive 
+                        rich Albanian heritage and Islamic tradition. We strive to foster a welcoming and inclusive 
                         space for every member of the Muslim community.</p>
                     <a href="https://www.facebook.com/Albanianislamiccenter/?ref=embed_page#" class="social-media" target="_blank"> 
                         <img src="images/facebook.png" class="facebook-img">
