--- a/events.html
+++ b/events.html
@@ -133,6 +133,30 @@
             <!-- Dinner Events Tab -->
             <div id="dinners" class="tab-content">
                 <div class="events-grid">
+
+
+                                        <!-- Eid Al-Fitr Dinner -->
+                    <div class="event-card">
+                        <img src="images/Eid-Al-Fitr.jpg" class="event-image">
+                        <div class="event-content">
+                            <h3 class="event-title">Eid Al-Fitr Dinner</h3>
+                            <div class="event-time dinner-time">
+                                <span>Doors: 5PM | Program: 6PM</span>
+                            </div>
+                            <div class="event-details">
+                                Join us for our annual Eid Al-Fitr celebration dinner with inspiring speeches, potential guest speakers, beautiful nasheed performances, Quran recitations by our students, and community fellowship.
+                            </div>
+                            <div class="event-highlight">
+                                <strong>Tickets:</strong> Purchase online or by phone<br>
+                                <strong>Call:</strong> 313-884-6676 for reservations<br>
+                                
+                            </div>
+                            <!-- Eventbrite Widget for Eid Al-Fitr Dinner -->
+                            <noscript><a href="https://www.eventbrite.com/e/eid-al-fitr-dinner-tickets-1445349532359" rel="noopener noreferrer" target="_blank">Buy Tickets on Eventbrite</a></noscript>
+                            <button id="eventbrite-widget-modal-trigger-1445349532359" type="button">Buy Tickets</button>
+                        </div>
+                    </div>
+
                     <!-- Eid Al-Adha Dinner -->
                     <div class="event-card">
                         <img src="images/eid image.png" class="event-image">
@@ -145,9 +169,8 @@
                                 Celebrate Eid Al-Adha with a special community dinner featuring speeches, guest speakers, nasheed performances by Sunday school children, Quran recitations, and delicious dinner.
                             </div>
                             <div class="event-highlight">
-                                <strong>Tickets:</strong> $30 Adults | $10 Children (under 12)<br>
-                                <strong>Table Reservations:</strong> 8-10 people required<br>
-                                <strong>RSVP Deadline:</strong> 2 days before event
+                                <strong>Tickets:</strong> Purchase online or by phone<br>
+                                <strong>Call:</strong> 313-884-6676 for reservations<br>
                             </div>
                             <!-- Eventbrite Widget for Eid Al-Adha Dinner -->
                             <noscript><a href="https://www.eventbrite.com/e/eid-al-adha-dinner-tickets-1445349422029" rel="noopener noreferrer" target="_blank">Buy Tickets on Eventbrite</a></noscript>
@@ -155,27 +178,7 @@
                         </div>
                     </div>
 
-                    <!-- Eid Al-Fitr Dinner -->
-                    <div class="event-card">
-                        <img src="images/Eid-Al-Fitr.jpg" class="event-image">
-                        <div class="event-content">
-                            <h3 class="event-title">Eid Al-Fitr Dinner</h3>
-                            <div class="event-time dinner-time">
-                                <span>Doors: 5PM | Program: 6PM</span>
-                            </div>
-                            <div class="event-details">
-                                Join us for our annual Eid Al-Fitr celebration dinner with inspiring speeches, potential guest speakers, beautiful nasheed performances, Quran recitations by our students, and community fellowship.
-                            </div>
-                            <div class="event-highlight">
-                                <strong>Tickets:</strong> $30 Adults | $10 Children (under 12)<br>
-                                <strong>Call:</strong> 313-884-6676 for reservations<br>
-                                <strong>RSVP Deadline:</strong> 2 days before event
-                            </div>
-                            <!-- Eventbrite Widget for Eid Al-Fitr Dinner -->
-                            <noscript><a href="https://www.eventbrite.com/e/eid-al-fitr-dinner-tickets-1445349532359" rel="noopener noreferrer" target="_blank">Buy Tickets on Eventbrite</a></noscript>
-                            <button id="eventbrite-widget-modal-trigger-1445349532359" type="button">Buy Tickets</button>
-                        </div>
-                    </div>
+
 
                     <!-- Albania Independence Day -->
                     <div class="event-card">
@@ -189,9 +192,8 @@
                                 Celebrate Albanian heritage and independence with traditional dinner, cultural programs, and community gathering.
                             </div>
                             <div class="event-highlight">
-                                <strong>Program:</strong> Cultural performances and dinner<br>
-                                <strong>Info:</strong> Call 313-884-6676<br>
-                                <strong>Details:</strong> Announced closer to event date
+                                <strong>Tickets:</strong> Purchase online or by phone<br>
+                                <strong>Call:</strong> 313-884-6676 for reservations<br>
                             </div>
                             <!-- Eventbrite Widget for Albania Independence Day -->
                             <noscript><a href="https://www.eventbrite.com/e/albania-independence-day-tickets-1425429099809" rel="noopener noreferrer" target="_blank">Buy Tickets on Eventbrite</a></noscript>
@@ -211,9 +213,8 @@
                                 Honor Kosovo's independence with an evening of culture, community, and traditional cuisine.
                             </div>
                             <div class="event-highlight">
-                                <strong>Program:</strong> Cultural celebration and dinner<br>
-                                <strong>RSVP:</strong> Call 313-884-6676<br>
-                                <strong>Updates:</strong> Follow our Facebook page
+                                <strong>Tickets:</strong> Purchase online or by phone<br>
+                                <strong>Call:</strong> 313-884-6676 for reservations<br>
                             </div>
                             <!-- Eventbrite Widget for Kosovo Independence Day -->
                             <noscript><a href="https://www.eventbrite.com/e/kosovo-independence-day-tickets-1439726032319" rel="noopener noreferrer" target="_blank">Buy Tickets on Eventbrite</a></noscript>
@@ -268,7 +269,7 @@
                 <div class="support-text">
                     <img src="images/Logo.png" alt="Albanian Islamic Center Logo" class="logo-img">
                     <p>Welcome to the Albanian Islamic Center, a place of worship, learning, and community rooted in 
-                        rich Balkan heritage and Islamic tradition. We strive to foster a welcoming and inclusive 
+                        rich Albanian heritage and Islamic tradition. We strive to foster a welcoming and inclusive 
                         space for every member of the Muslim community.</p>
                     <a href="https://www.facebook.com/Albanianislamiccenter/?ref=embed_page#" class="social-media" target="_blank"> 
                         <img src="images/facebook.png" class="facebook-img">
