--- a/contactus.html
+++ b/contactus.html
@@ -103,8 +103,8 @@
                     <div class="contact-form-card" data-aos="fade-left">
                         <h2>Send Us a Message</h2>
                         <p class="form-description">Have a question or need assistance? Fill out the form below and we'll get back to you as soon as possible.</p>
-                        
-                        <form class="contact-form" action="#" method="POST">
+
+                        <form action = "https://getform.io/f/adrglyxa" class="contact-form" method="POST">
                             <div class="form-row">
                                 <div class="form-group">
                                     <label for="firstName">First Name *</label>
