--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </button>
                 <button class="language-btn" data-lang="sq">
                     <span class="flag-icon">🇦🇱</span>
-                    <span>SQ</span>
+                    <span>AL</span>
                 </button>
             </div>
         </div>
