Final Language changes

--- a/about.html
+++ b/about.html
@@ -469,4 +469,5 @@ document.addEventListener('DOMContentLoaded', function() {
     document.querySelector('.mySlides').style.display = 'block';
 });
         </script>
- 
+ </body>
+</html>
