--- a/membership.html
+++ b/membership.html
@@ -507,3 +507,5 @@ Submitted on: ${new Date().toLocaleDateString()} at ${new Date().toLocaleTimeStr
             });
         </script>
      
+</body>
+</html>
