Final form changes

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <div class="column11">     
                     <h2 data-translate="upcoming-events">Upcoming Events</h2>
                     <div class="calendar-container">
-                        <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FNew_York&showPrint=0&mode=AGENDA&src=Z2VyZ2VqbUBnbWFpbC5jb20&src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%237986CB&color=%23795548" style="border:solid 1px #777" width="99%" height="600" frameborder="0" scrolling="no"></iframe>
+                        <iframe src="https://calendar.google.com/calendar/embed?src=albislamct%40gmail.com&ctz=America%2FDetroit" style="border:solid 1px #777" width="99%" height="600" frameborder="0" scrolling="no"></iframe>
                     </div>
                     <div class="footer-btn">
                         <a href="events.html" class="events-btn" data-translate="view-all-events">View All Events</a>
