--- a/contactus.html
+++ b/contactus.html
@@ -115,7 +115,7 @@
                         <h2 data-translate="send-message">Send Us a Message</h2>
                         <p class="form-description" data-translate="form-description">Have a question or need assistance? Fill out the form below and we'll get back to you as soon as possible.</p>
 
-                        <form action="https://getform.io/f/adrglyxa" class="contact-form" method="POST">
+                        <form action="https://formspree.io/f/xvgrndrn" class="contact-form" method="POST">
                             <div class="form-row">
                                 <div class="form-group">
                                     <label for="firstName" data-translate="first-name-label">First Name *</label>
